src/app/pages/playlists-page/playlists-page.component.less
@import "../../../assets/styles/colors";

:host {
  font-family: 'Roboto', sans-serif;
  width: 1546px;

  @media screen and (min-width: 1280px) and (max-width: 1545px) {
    width: 1280px;
  }

  @media screen and (min-width: 920px) and (max-width: 1279.99px) {
    width: 920px;
  }

  .playlists-wrapper, .playlists-wrapper-dark {
    margin: 50px 0 0 0;
    @media screen and ( max-width: 919px ) {
      padding-bottom: 80px;
    }

    .playlists {
      display: grid;
      gap: 60px;
      grid-template-columns: 764px 3px 680px;
      grid-template-rows: auto auto auto;

      @media screen and (min-width: 1280px) and (max-width: 1545px) {
        grid-template-columns: 462px 3px 420px;
      }

      @media screen and (min-width: 920px) and (max-width: 1279.99px) {
        grid-template-columns: 323px 3px 361px;
      }

      @media screen and (max-width: 920px) {
        display: flex;
        flex-direction: column;
      }

      .playlist__image {
        min-width: 150px;
        height: 150px;
        border-radius: 5px;
        background-position: center;
        background-size: cover;
      }

      .playlist__list {
        .active {
          background-color: @album-playlist-background;
        }

        .playlist__add {
          display: flex;
          flex-direction: row;
          margin-bottom: 50px;
          border-radius: 5px;
          padding: 23px 0 23px 14px;

          &:hover {
            cursor: pointer;
            background-color: @album-playlist-background;

          }

          .playlist__name {
            font-size: 24px;
            margin-left: 30px;

            @media screen and (min-width: 920px) and (max-width: 1279.99px) {
              font-size: 17px;
            }
          }
        }

        .playlist {
          cursor: pointer;
          padding: 23px 0 23px 14px;
          display: flex;
          margin-bottom: 50px;
          border-radius: 5px;

          &:hover{
            background-color: @album-playlist-background;
          }

          @media screen and ( max-width: 420px ) {
            margin-bottom: 0;
          }

          .playlist__info {
            margin-left: 30px;

            .playlist__control {
              display: flex;
              margin-bottom: 0;

              .playlist__edit {
                margin-right: 8px;

                &:hover {
                  cursor: pointer;
                  color: @active-link;
                }
              }

              .playlist__delete:hover {
                cursor: pointer;
                color: @active-link;
              }
            }

            .playlist__name {
              margin: 0;
              font-size: 24px;

              @media screen and (min-width: 920px) and (max-width: 1279.99px) {
                font-size: 17px;
              }
            }

            .playlist__owner {
              font-size: 14px;
              font-weight: 200;
              margin-top: 3px;
              margin-bottom: 12px;
            }
          }
        }
      }

      .playlists__hr {
        border: 1px solid #000000;
        height: 100%;
        align-self: center;
        justify-self: center;
        @media screen and (max-width: 920px) {
          width: 99%;
        }
      }

      .playlists__tracks {

        .playlists-tracks__playlist {
          display: flex;
          margin-bottom: 30px;

          @media screen and (max-width: 420px) {
            flex-direction: column;
            align-items: center;
          }
          
          .playlist-tracks__avatar {

            .playlist-tracks__image {
              width: 150px;
              height: 150px;
              border-radius: 5px;
              background-position: center;
              background-size: cover;
            }

            .playlist-tracks__vinyl {
              z-index: -1;
              width: 185px;
              height: 128px;
              position: absolute;
              transform: translate(30px, 12px);
            }

          }

          .playlist-tracks__info{
            margin-left: 104px;
            @media screen and (max-width: 420px) {
              margin-left: 0;
              display: flex;
              flex-direction: column;
              align-items: center;
            }

            .playlist-tracks__name{
              margin: 0;
              font-size: 24px;
            }

            .playlist-tracks__author {
              font-size: 14px;
              font-weight: 100;
            }
          }
        }
      }

      .playlist__waiting {
        display: flex;
        position: fixed;
        top: 27%;
        right: 9%;
        flex-direction: column;
        align-items: center;
        align-content: center;

        @media screen and (min-width:920px) and (max-width: 1279.99px) {
          right: 7%;
        }

        @media screen and (max-width: 920px) {
          position: relative;
          right: 0;
        }

        .playlist-waiting__img {
          width: 450px;

          @media screen and (min-width: 920px) and (max-width: 1279.99px) {
            width: 320px
          }

          @media screen and ( max-width: 420px ) {
            width: 300px;
          }
        }

        .playlist-waiting__text {
          margin-top: 35px;
          font-size: 24px;

          @media screen and (min-width:920px) and (max-width: 1279.99px) {
            font-size: 16px;
          }

          @media screen and (max-width: 920px) {
            text-align: center;
          }
        }
      }
    }

    .modal {
      position: fixed;
      display: flex;
      justify-content: center;
      z-index: 1;
      padding-top: 50px;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      background: rgba(0, 0, 0, 0.4);

      &__content {
        z-index: 2;
        overflow: auto;
        padding: 20px 10px 20px 15px;
        width: 450px;
        height: 260px;
        border-radius: 7px;
        position: relative;
      }

      &__title {
        font-weight: bold;
      }

      &__image {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;

        input {
          width: 0.1px;
          height: 0.1px;
          opacity: 0;
          overflow: hidden;
          position: absolute;
          z-index: -1;
        }

        img {
          width: 80px;
          height: 80px;
          object-fit: cover;
        }

        .modal__label {
          width: 120px;
          height: 120px;
          background-size: cover;
          text-align: center;
          cursor: pointer;
          display: flex;
          align-items: center;
          justify-content: center;
          transition: all 0.18s ease-in-out;
          border-radius: 5px;
          background-position: center;
          position: relative;
          color: #ffffff;

          .modal__opacity {
            position: absolute;
            width: 100%;
            height: 100%;

            &:hover {
              background-color: black;
              opacity: 0.6;
            }
          }

          button {
            position: absolute;
            top: 3px;
            right: 3px;
            width: 23px;
            display: none;
            height: 23px;
            border: none;
            border-radius: 50%;
            background-color: black;
            opacity: 0.6;
            color: white;
          }

          &:hover button {
            display: block;
            cursor: pointer;
          }

          &:hover::before {
            content: ' ';
            background: url('src/assets/image/icon-upload-white.png');
            background-size:contain;
            width: 80px;
            height: 80px;
            z-index: 1000;
            pointer-events: none;
          }
        }
      }

      &-inputs {
        display: flex;
        flex-direction: column;
        width: 300px;
        margin: 5px;

        &__name {
          margin-bottom: 10px;
        }
      }

      &__edite-playlist {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        margin-top: 15px;
      }

      &__warning {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;

        span {
          color: red;
        }
      }

      &__control {
        display: flex;
        align-items: center;
        justify-content: flex-end;
        margin-top: 5px;

        button {
          margin: 5px;
        }
      }

      &__content::-webkit-scrollbar {
        width: 7px;
      }
      &__content::-webkit-scrollbar-thumb {
        border-radius: 10px;
        background-color: rgb(182 107 107 / 0.45);
      }
      &__content::-webkit-scrollbar-track {
        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
        border-radius: 10px;
        background-color: #f9f9fd;
      }
    }
  }

  .playlists-wrapper-dark {
    * {
      color: @white;
    }
    input {
      color: black;
    }
    textarea {
      color: black;
    }
    .modal__cancel {
      color: black;
    }
    .playlists {
      .playlists__hr {
        border: 1px solid @white;
      }
    }
  }
}

